[package]
name = "fetch"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
thiserror = "1"
leptos = {version = "0.4.9", features = ["csr","nightly"] }
chrono = "0.4.26"

[dev-dependencies]
wasm-bindgen-test = "0.3"
